@@ -1,3 +1,4 @@
+  add merge_tables
 * 2015-11-05 1.2
   remove VERSION from submodules
 * 2015-11-05 1.1
